--- a/src/pages/service-architecture.html
+++ b/src/pages/service-architecture.html
@@ -295,6 +295,25 @@
         <section class="project-support">
             <div class="project-support__scroll">
                 <div class="project-support__container">
+                    <div class="preoject-description__button">
+                        <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+                        <div class="price-supervision__button-anchor black-button">
+                            <div class="main-view__button-text-wrapper">
+                                <div class="main-view__button-text">оставить <br>заявку</div>
+                            </div>
+                            <div class="main-view__arrow-wrapper">
+                                <div class="main-view__arrow">
+                                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="animation-button-height animation-height">
+                                <div class="round-button"></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="project-support__top">
                         <div class="project-support__title">
                             <div class="slide-down-in-view__container">
@@ -431,12 +450,47 @@
             </div>
         </div>
         <div class="premium-service__bottom">
-            <div class="premium-service__bottom-title scale-into-view">
-                Цельность проекта
-            </div>
-            <div class="premium-service__bottom-text scale-into-view">
-                Полная гармония внешнего
-                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+            <div class="premium-service__text-slider-wrapper scale-into-view">
+                <div class="swiper premium-service__text-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Цельность проекта
+                            </div>
+                            <div class="premium-service__bottom-text">
+                                Полная гармония внешнего
+                                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Цельность проекта2
+                            </div>
+                            <div class="premium-service__bottom-text">
+                                Полная гармония внешнего
+                                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Цельность проекта3
+                            </div>
+                            <div class="premium-service__bottom-text">
+                                Полная гармония внешнего
+                                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Цельность проекта4
+                            </div>
+                            <div class="premium-service__bottom-text">
+                                Полная гармония внешнего
+                                и внутреннего облика, так как архитектура и интерьер разрабатываются одной командой. Это создаёт единый концепт, соответствующий вашему видению.
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="swiper__navigation-box scale-into-view">
                 <div class="premium-service-swiper__prev">
