--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -484,7 +484,7 @@
                                                         <div class="slide-up-in-view duration-1">
                                                             Игнорируем быстротечные тренды
                                                             и придерживаемся архитектурного подхода.
-                                                            Это выражается в нашем подходе к проектированию. Мы создаем формы, объема, а не решаем каждую стену отдельно декоративными способами.
+                                                            Это выражается в нашем подходе к проектированию.
                                                         </div>
                                                     </div>
                                                 </div>
@@ -513,7 +513,7 @@
                                                         <div class="slide-up-in-view duration-1">
                                                             Игнорируем быстротечные тренды
                                                             и придерживаемся архитектурного подхода.
-                                                            Это выражается в нашем подходе к проектированию. Мы создаем формы, объема, а не решаем каждую стену отдельно декоративными способами.
+                                                            Это выражается в нашем подходе к проектированию.
                                                         </div>
                                                     </div>
                                                 </div>
@@ -659,7 +659,7 @@
         </section>
     </div>
     <div class="mb-8" data-anchor="price-assembly">
-        <section class="price-assembly">
+        <section class="price-assembly compl">
             <div class="price-assembly__scroll">
                 <div class="price-assembly__content">
                     <div class="price-supervision__img scale-into-view white-header">
@@ -707,22 +707,28 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="price-assembly__gray-line"><div class="gray-line"></div></div>
-                    <div class="price-assembly__button-anchor black-button">
-                        <div class="main-view__button-text-wrapper">
-                            <div class="main-view__button-text main-view__button-text5">ознакомиться <br>с услугой</div>
-                        </div>
-                        <div class="main-view__arrow-wrapper">
-                            <div class="main-view__arrow main-view__arrow5">
-                                <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                                    <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                                </svg>
-                            </div>
-                        </div>
-                        <div class="animation-button-height5 animation-button-height animation-height">
-                            <div class="round-button"></div>
+                        <div class="price-assembly_p-button">
+                            <a href="#" class="primary-button">
+                                <div class="slide-up-in-view__container">
+                                    <div class="primary-button__text slide-up-in-view duration-1">
+                                        <div class="primary-button__text-animation">подробнее</div>
+                                    </div>
+                                </div>
+                                <div class="primary-button__circle-anchor">
+                                    <div class="primary-button__circle-animation">
+                                        <div class="primary-button__circle"></div>
+                                    </div>
+                                </div>
+                                <div class="slide-up-in-view__container">
+                                    <div class="primary-button__arrow slide-up-in-view duration-1 ">
+                                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -977,7 +983,7 @@
         </section>
     </div>
     <div data-anchor="faq">
-        <section class="faq">
+        <section class="faq with-image">
             <div class="faq__scroll">
                 <div class="faq__content">
                     <div class="faq__left">
