--- a/src/pages/service-vision.html
+++ b/src/pages/service-vision.html
@@ -140,6 +140,11 @@
                             </div>
                         </div>
                     </div>
+                    <div class="vision-main__sub-title">
+                        Полный контроль<br>
+                        над процессом закупок<br>
+                        и поставок
+                    </div>
                     <div class="vision-main__bottom">
                         <div class="vision-main__bottom-description">
                             <div class="vision-main__bottom-label">
@@ -196,7 +201,7 @@
                         <div class="design-steps__top-text">
                             <div class="slide-down-in-view__container">
                                 <div class="slide-down-in-view duration-1">
-                                    Синтез инженерных систем с дизайн-проектом
+                                    Синтез инженерных систем<br> с дизайн-проектом
                                 </div>
                             </div>
                         </div>
@@ -208,13 +213,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="about-advantages__list">
+                    <div class="about-advantages__list show-description">
                         <div class="about-advantages__item-wrapper">
                             <div class="about-advantages__item-animation">
                                 <div class="about-advantages__item">
-                                    <div class="about-advantages__item-num">1</div>
-                                    <div class="about-advantages__item-text">помощь с подбором бригады<br>
-                                        и выезды на объект</div>
+                                    <div class="about-advantages__row">
+                                        <div class="about-advantages__item-num">1</div>
+                                        <div class="about-advantages__item-text">помощь с подбором бригады<br>
+                                            и выезды на объект</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -222,8 +229,13 @@
                         <div class="about-advantages__item-wrapper">
                             <div class="about-advantages__item-animation">
                                 <div class="about-advantages__item">
-                                    <div class="about-advantages__item-num">2</div>
-                                    <div class="about-advantages__item-text">постоянная коммуникация</div>
+                                    <div class="about-advantages__row">
+                                        <div class="about-advantages__item-num">2</div>
+                                        <div class="about-advantages__item-text">постоянная коммуникация</div>
+                                    </div>
+                                    <div class="about-advantages__item-description gray-text">
+                                        С обязательной письменной фиксацией договоренностей
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -231,9 +243,11 @@
                         <div class="about-advantages__item-wrapper">
                             <div class="about-advantages__item-animation">
                                 <div class="about-advantages__item">
-                                    <div class="about-advantages__item-num">3</div>
-                                    <div class="about-advantages__item-text">при необходимости внесение уточнений<br>
-                                        и корректировок в рабочие чертежи</div>
+                                    <div class="about-advantages__row">
+                                        <div class="about-advantages__item-num">3</div>
+                                        <div class="about-advantages__item-text">при необходимости внесение уточнений<br>
+                                            и корректировок в рабочие чертежи</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -241,9 +255,11 @@
                         <div class="about-advantages__item-wrapper">
                             <div class="about-advantages__item-animation">
                                 <div class="about-advantages__item">
-                                    <div class="about-advantages__item-num">4</div>
-                                    <div class="about-advantages__item-text">координация подрядчиков<br>
-                                        из смежных областей</div>
+                                    <div class="about-advantages__row">
+                                        <div class="about-advantages__item-num">4</div>
+                                        <div class="about-advantages__item-text">координация подрядчиков<br>
+                                            из смежных областей</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -281,12 +297,101 @@
             </div>
         </div>
     </div>
-    <div data-anchor="projects" class="mb-8 projects-section">
-        <section class="projects isSelected">
-            <div class="fullscreen-projects"></div>
-            <!--<div class="projects__button-anchor">
+    <div class="premium-service vision">
+        <div class="premium-service__top">
+            <div class="premium-service__label slide-down-in-view">преимущества работы с нами</div>
+            <div class="premium-service__title slide-up-in-view">Премиальный сервис с заботой о вас</div>
+        </div>
+        <div class="premium-service-slider__wrapper scale-into-view">
+            <div class="swiper premium-service-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="premium-service__img">
+                            <img src="../assets/images/prem2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="premium-service__bottom">
+            <div class="premium-service__text-slider-wrapper scale-into-view">
+                <div class="swiper premium-service__text-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Проект<br>
+                                реализовывается<br>
+                                в рамках изначальной <br>
+                                задумки
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Проект2<br>
+                                реализовывается<br>
+                                в рамках изначальной <br>
+                                задумки
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                Проект3<br>
+                                реализовывается<br>
+                                в рамках изначальной <br>
+                                задумки
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="premium-service__bottom-title">
+                                4<br>
+                                реализовывается<br>
+                                в рамках изначальной <br>
+                                задумки
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper__navigation-box scale-into-view">
+                <div class="premium-service-swiper__prev">
+                    <svg class="icon-arrow-left" width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9.57031 6.42969L3.50031 12.4997L9.57031 18.5697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M20.5 12.5H3.67" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div class="premium-service-swiper__next">
+                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <div class="preoject-description__button">
+            <div class="price-supervision__gray-line"><div class="gray-line"></div></div>
+            <div class="price-supervision__button-anchor black-button">
                 <div class="main-view__button-text-wrapper">
-                    <div class="main-view__button-text">смотреть<br>проекты</div>
+                    <div class="main-view__button-text">
+                        закажите<br>
+                        звонок<br>
+                        в удобное<br>
+                        для вас время
+                    </div>
                 </div>
                 <div class="main-view__arrow-wrapper">
                     <div class="main-view__arrow">
@@ -299,7 +404,12 @@
                 <div class="animation-button-height animation-height">
                     <div class="round-button"></div>
                 </div>
-            </div>-->
+            </div>
+        </div>
+    </div>
+    <div data-anchor="projects" class="mb-8 projects-section">
+        <section class="projects isSelected">
+            <div class="fullscreen-projects"></div>
             <div class="projects-top black-header">
                 <div class="projects-top__content">
                     <div class="animation-slide-down__container">
@@ -352,10 +462,12 @@
                     <div class="swiper projects-swiper ">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
+
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -413,6 +525,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="projects-swiper-slide__bl-text">2021<span class="dott"></span>55 М<span class="upper">2</span></div>
                                 <div class="projects-swiper-slide__wrapper">
                                     <img class="slide-up-and-scale-in-view" src="../assets/images/MSC-21.png" alt="">
                                 </div>
@@ -421,7 +534,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -454,7 +567,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -487,7 +600,7 @@
                                 <div class="projects-swiper-slide__content">
                                     <div class="projects-swiper-slide__button-anchor">
                                         <div class="main-view__button-text-wrapper">
-                                            <div class="main-view__button-text">оставить<br>заявку</div>
+                                            <div class="main-view__button-text">смотреть<br>проект</div>
                                         </div>
                                         <div class="main-view__arrow-wrapper">
                                             <div class="main-view__arrow">
@@ -541,8 +654,21 @@
             <div class="projects-swiper-box--holder"></div>
         </section>
     </div>
+    <div class="vision-alert mb-8">
+        <div class="vision-alert__text slide-up-in-view">
+            при авторском надзоре студия<br>
+            <span class="gray-text">не несет ответственности за<br> качество ремонтных и инженерных<br> работ, но</span>
+             проинформирует клиента<br> в случае обнаружения нарушения<br> технологий или качества
+        </div>
+        <div class="vision-alert__text slide-up-in-view">
+            Авторский надзор<br>
+            <span class="gray-text">не равно</span> технический надзор.<br>
+            Технический надзор может быть<br>
+            организован <span class="gray-text">дополнительно</span>
+        </div>
+    </div>
     <div data-anchor="faq">
-        <section class="faq">
+        <section class="faq with-image">
             <div class="faq__scroll">
                 <div class="faq__content">
                     <div class="faq__left">
